ci/deploy/environments/prod/k8s/ingress.yml
#------------------------------------------------------------------------------
# written by: Lawrence McDaniel
#             https://lawrencemcdaniel.com
#
# date:       Sep-2022
#
# usage: setup nginx for EKS load balancer.
#        see https://cert-manager.io/docs/
#------------------------------------------------------------------------------
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: swapi-prod
  namespace: querium-swapi
  annotations:
    # base annotations: pretty much all ingresses need these.
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  tls:
  - hosts:
    - "qq-stepwise-api.querium.com"
    - "*.qq-stepwise-api.querium.com"
    secretName: wild-swapi-prod-tls
  rules:
  - host: qq-stepwise-api.querium.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: swapi-prod
            port:
              number: 8080
